# fastapi-mcq

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
.kiro/specs/mcq-test-platform/: design-v2.md  design.md  requirements-v2.md  requirements.md  tasks-v2.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py
app/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  security.py
app/mcq/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/test_management/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/tests/: test_auth_integration.py  test_auth_models.py  test_auth_repository.py  test_auth_service.py  test_mcq_integration.py  test_mcq_models.py  test_mcq_repository.py  test_mcq_schemas.py  test_mcq_service.py  test_test_integration.py  test_test_models.py  test_test_repository.py  test_test_schemas.py  test_test_service.py  test_user_role_model.py
migrations/: env.py
migrations/versions/: 5242eee39c39_initial_migration_user_test_and_mcq_.py  56c7c1dede0f_check_for_model_changes.py  9196632d67ac_add_role_field_to_user_table.py
